udemy/infrastructure/vpc.tf
provider "aws" {
  region = "${var.region}"
}

terraform {
  backend "s3" {}
}

resource "aws_vpc" "production_vpc" {
  cidr_block           = "${var.vpc_cidr}"
  enable_dns_hostnames = true #Allow EC2 instances to recieve hostnames as EC2 dns name

  tags = {
    Name = "Production-VPC"
  }
}

resource "aws_subnet" "public-subnet-1" {
  cidr_block        = "${var.public_subnet_1_cidr}"
  vpc_id            = "${aws_vpc.production_vpc.id}"
  availability_zone = "eu-west-1a"

  tags = {
    Name = "Public-Subnet-1"
  }
}

resource "aws_subnet" "public-subnet-2" {
  cidr_block        = "${var.public_subnet_2_cidr}"
  vpc_id            = "${aws_vpc.production_vpc.id}"
  availability_zone = "eu-west-1b"

  tags = {
    Name = "Public-Subnet-2"
  }
}

resource "aws_subnet" "public-subnet-3" {
  cidr_block        = "${var.public_subnet_3_cidr}"
  vpc_id            = "${aws_vpc.production_vpc.id}"
  availability_zone = "eu-west-1c"

  tags = {
    Name = "Public-Subnet-3"
  }
}

resource "aws_subnet" "private-subnet-1" {
  cidr_block        = "${var.private_subnet_1_cidr}"
  vpc_id            = "${aws_vpc.production_vpc.id}"
  availability_zone = "eu-west-1a"

  tags = {
    Name = "Private-Subnet-1"
  }
}

resource "aws_subnet" "private-subnet-2" {
  cidr_block        = "${var.private_subnet_2_cidr}"
  vpc_id            = "${aws_vpc.production_vpc.id}"
  availability_zone = "eu-west-1b"

  tags = {
    Name = "Private-Subnet-2"
  }
}

resource "aws_subnet" "private-subnet-3" {
  cidr_block        = "${var.private_subnet_3_cidr}"
  vpc_id            = "${aws_vpc.production_vpc.id}"
  availability_zone = "eu-west-1c"

  tags = {
    Name = "Private-Subnet-3"
  }
}

resource "aws_subnet" "management-subnet-1" {
  cidr_block        = "${var.management_subnet_1_cidr}"
  vpc_id            = "${aws_vpc.production_vpc.id}"
  availability_zone = "eu-west-1a"

  tags = {
    Name = "Management-Subnet-1"
  }
}

resource "aws_subnet" "management-subnet-2" {
  cidr_block        = "${var.management_subnet_2_cidr}"
  vpc_id            = "${aws_vpc.production_vpc.id}"
  availability_zone = "eu-west-1b"

  tags = {
    Name = "Management-Subnet-2"
  }
}

resource "aws_subnet" "management-subnet-3" {
  cidr_block        = "${var.management_subnet_3_cidr}"
  vpc_id            = "${aws_vpc.production_vpc.id}"
  availability_zone = "eu-west-1c"

  tags = {
    Name = "Management-Subnet-3"
  }
}

resource "aws_route_table" "public-route-table" {
  vpc_id = "${aws_vpc.production_vpc.id}"

  tags = {
    Name = "Public-Route-Table"
  }
}

resource "aws_route_table" "private-route-table" {
  vpc_id = "${aws_vpc.production_vpc.id}"

  tags = {
    Name = "Private-Route-Table"
  }
}

resource "aws_route_table" "management-route-table" {
  vpc_id = "${aws_vpc.production_vpc.id}"

  tags = {
    Name = "Management-Route-Table"
  }
}

resource "aws_route_table_association" "public-subnet-1-association" {
  route_table_id = "${aws_route_table.public-route-table.id}"
  subnet_id      = "${aws_subnet.public-subnet-1.id}"
}

resource "aws_route_table_association" "public-subnet-2-association" {
  route_table_id = "${aws_route_table.public-route-table.id}"
  subnet_id      = "${aws_subnet.public-subnet-2.id}"
}

resource "aws_route_table_association" "public-subnet-3-association" {
  route_table_id = "${aws_route_table.public-route-table.id}"
  subnet_id      = "${aws_subnet.public-subnet-3.id}"
}

resource "aws_route_table_association" "private-subnet-1-association" {
  route_table_id = "${aws_route_table.private-route-table.id}"
  subnet_id      = "${aws_subnet.private-subnet-1.id}"
}

resource "aws_route_table_association" "private-subnet-2-association" {
  route_table_id = "${aws_route_table.private-route-table.id}"
  subnet_id      = "${aws_subnet.private-subnet-2.id}"
}

resource "aws_route_table_association" "private-subnet-3-association" {
  route_table_id = "${aws_route_table.private-route-table.id}"
  subnet_id      = "${aws_subnet.private-subnet-3.id}"
}

resource "aws_route_table_association" "management-subnet-1-association" {
  route_table_id = "${aws_route_table.management-route-table.id}"
  subnet_id      = "${aws_subnet.management-subnet-1.id}"
}

resource "aws_route_table_association" "management-subnet-2-association" {
  route_table_id = "${aws_route_table.management-route-table.id}"
  subnet_id      = "${aws_subnet.management-subnet-2.id}"
}

resource "aws_route_table_association" "management-subnet-3-association" {
  route_table_id = "${aws_route_table.management-route-table.id}"
  subnet_id      = "${aws_subnet.management-subnet-3.id}"
}

# NAT gateway is used to float traffic from internet to private instances
resource "aws_eip" "elastic-ip-for-nat-gw" {
  vpc                       = true
  associate_with_private_ip = "10.0.0.5" #Private IP address for elastic IP

  tags = {
    Name = "Production-EIP"
  }
}

resource "aws_nat_gateway" "nat-gw" {
  allocation_id = "${aws_eip.elastic-ip-for-nat-gw.id}"
  subnet_id     = "${aws_subnet.private-subnet-1.id}"

  tags = {
    Name = "Production-NAT-GW"
  }

  depends_on = ["aws_eip.elastic-ip-for-nat-gw"]
}

resource "aws_route" "nat-gw-route" {
  route_table_id         = "${aws_route_table.private-route-table.id}"
  nat_gateway_id         = "${aws_nat_gateway.nat-gw.id}"
  destination_cidr_block = "0.0.0.0/0"
}

resource "aws_internet_gateway" "production-igw" {
  vpc_id = "${aws_vpc.production_vpc.id}"

  tags = {
    Name = "Production-IGW"
  }
}

resource "aws_route" "public-internet-gw-route" {
  route_table_id         = "${aws_route_table.public-route-table.id}"
  gateway_id             = "${aws_internet_gateway.production-igw.id}"
  destination_cidr_block = "0.0.0.0/0"
}
